# llm-profile-agent

./: .gitignore  README.md  config.py  main.py  profile_loader.py  pyproject.toml
_TEST/src/: llm_wrapper.py  profile_loader.py  utils.py
_TEST/web/: app.py
data/: profile.json
llm_profile_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  agent.py  llm_wrapper.py  llm_wrapper_safe.py  profile_loader.py
web/: app.py  components.py
